非訟事件法 2013.4.16

--- a/司法-民事/非訟事件法.md
+++ b/司法-民事/非訟事件法.md
@@ -14,9 +14,9 @@
 
 > 釋：一、本條新增。二、為配合簡易庭（法院組織法第十條）之設置，非訟事件依其種類及繁簡，分由地方法院或分院或其簡易庭受理，以充分運用簡易庭之資源。惟同一地方法院或分院轄區內各簡易庭間，及地方法院或分院與其簡易庭相互間，關於非訟事件之處理權限，屬同一地方法院之事務分配問題，且事涉瑣細，宜授權司法院另以辦法定之。
 
-* 5 民事訴訟法第二十八條第一項及第二十九條至第三十一條之規定，除別有規定外，於非訟事件準用之。
+* 5 民事訴訟法第二十八條第一項及第二十九條至第三十一條之三規定，除別有規定外，於非訟事件準用之。
 
-> 釋：一、本條新增。二、非訟事件聲請人常不明瞭非訟事件土地管轄之規定，而誤向無管轄權之法院聲請，復因本法無準用民事訴訟法關於無管轄時法院得裁定移送他法院之規定，致此類事件，法院均予駁回，對當事人權益之影響甚鉅（例如向法院聲明拋棄繼承之事件，如因向無管轄權之法院為之，致遭駁回，若欲再向有管轄權之法院聲明拋棄，極可能已逾法定二個月期限，不生拋棄效力），為保障人民權益，避免關係人重複繳納費用及求程序經濟，爰將民事訴訟法關於移送管轄之規定，除第二十八條第二項因與本法第三條規定不符，不予準用外，其餘均明定納入本法準用範圍。
+> 釋：一、行政訴訟法於九十六年七月四日修正，將審判權錯誤之駁回制改採移送制，為與其規定相配合，民事訴訟法於九十八年一月二十一日增訂第三十一條之一至第三十一條之三規定。二、行政訴訟雖無非訟事件之類型，惟行政法院與普通法院，分別行使行政訴訟審判權及民事審判權，人民可能判斷困難或錯誤，如將應由行政法院審理之訴訟事件，誤向非訟法院為聲請，上開移送之相關規定於受理非訟事件之法院亦應準用，以維程序經濟、程序安定及程序利益，爰配合修正本條。
 
 * 6 有下列各款情形之一者，直接上級法院應依關係人之聲請或法院之請求，指定管轄：一、有管轄權之法院，因法律或事實不能行使職權者。二、因管轄區域境界不明，致不能辨別有管轄權之法院者。三、數法院於管轄權有爭議者。直接上級法院不能行使職權者，管轄之指定，由再上級法院為之。指定管轄之裁定，不得聲明不服。
 
@@ -118,13 +118,25 @@
 
 > 釋：一、原條文第十四條條次變更為本條。二、第一項本文之「左列」修正為「下列」，第一款所定「年齡」一詞，不如「出生年月日」精確，而「籍貫」之規定已為戶籍法所刪除，爰將「年齡」改為「出生年月日」，並刪除「籍貫」二字，俾符實際。又中央或地方機關實務上既認有當事人能力，當亦得為非訟事件聲請人，爰於本款中增列機關為當事人者，應於書狀或筆錄中記載機關之名稱或公務所，以為配合。三、非訟事件之代理人有法定代理人、非訟代理人之分，為求明確，將第一項第二款之「代理人」改為「法定代理人、非訟代理人」。另將「年齡」二字改為「出生年月日」，「籍貫」二字刪除。四、第一項其餘各款及第二項未修正。五、為配合第三十七條第一項但書之適用及日後非訟事件處理電腦化之趨勢，爰增設第三項。
 
+* 30.1 非訟事件之聲請，不合程式或不備其他要件者，法院應以裁定駁回之。但其情形可以補正者，法院應定期間先命補正。
+
+> 釋：一、本條新增。二、關於因聲請而開始之非訟事件，本法施行細則第十三條規定，非訟事件之聲請或陳述，欠缺法定要件，而其情形可以補正者，法院應限期命其補正，逾期不為補正時，應以裁定駁回之。為加強保障人民之聽審請求權及公正程序請求權，宜於本法予以規範，爰設本條。
+
+* 30.2 法院收受聲請書狀或筆錄後，得定期間命聲請人以書狀或於期日就特定事項詳為陳述；有相對人者，並得送達聲請書狀繕本或筆錄於相對人，限期命其陳述意見。
+
+> 釋：一、本條新增。二、為兼顧非訟事件審理之流暢、司法資源之合理運用，及使相對人能夠瞭解聲請人之主張意旨及證據資料，以利其防禦權之實施，並達儘速釐清爭點之目的，宜課關係人對於程序進行，負擔一定之協力義務。
+
+* 30.3 因程序之結果而法律上利害受影響之人，得聲請參與程序。法院認為必要時，得依職權通知前項之人參與程序。
+
+> 釋：一、本條新增。二、非訟事件採職權進行主義，為保障利害關係人之程序參與權及聽審請求權，對聲請人、相對人外之法律上利害關係人，如其因程序之結果，而法律上利害受影響者，應許其得聲請參與程序，爰設第一項。又法院認不合於參與之要件時，得以裁定駁回之，且聲請人對於該駁回之裁定，得依本法第四十一條規定提起抗告，自不待言。三、法院於認為必要時，亦得依職權通知上開利害關係人參與程序，爰設第二項。
+
 * 31 民事訴訟法有關送達、期日、期間及證據之規定，於非訟事件準用之。
 
 > 釋：一、原條文第十五條條次變更為本條。二、於「送達」及「期日」間加「、」號，俾資明確。又民事訴訟法中並無「釋明方法」之用語，且所謂「釋明」，乃提出證據方法，使法院產生薄弱心證之行為，已包含於「證據」之內，爰將「釋明方法」刪除。
 
-* 32 法院應依職權調查事實及必要之證據。法院為調查事實，得命關係人或法定代理人本人到場。
+* 32 法院應依職權或依聲請，調查事實及必要之證據。法院為調查事實，得命關係人或法定代理人本人到場。法院認為關係人之聲明或陳述不明瞭或不完足者，得曉諭其敘明或補充之。關係人應協力於事實及證據之調查。關係人就其提出之事實，應為真實、完全及具體之陳述。
 
-> 釋：一、原條文第十六條條次變更為本條。二、本條文未修正，列為第一項。三、事件之調查，如能訊問關係人，將使事實易於彰顯，有助於法院作成判斷，爰增訂第二項，規定法院為調查事實之必要，得命關係人或法定代理人本人到場。
+> 釋：一、非訟事件採職權探知主義，授予法院蒐集事證之權責，為求裁判之妥當、迅速，除責由法院依職權調查事實及必要之證據外，亦應賦予關係人聲請權，以保障其程序權，爰修正第一項。二、原條文第二項未修正。三、為儘速妥當處理關係人之爭議，避免發生突襲性裁判，法院應善盡闡明義務，於關係人之聲明、事實上及法律上陳述有不明瞭或不完足情形，法院得曉諭其敘明或補充之，爰增訂第三項。四、非訟事件雖因法院擁有廣泛之裁量權，且須依職權調查事實及必要之證據。惟關係人仍應負協力義務，法院闡述其裁判所需之事實及證據，由關係人協力陳述事實或提出證據，俾使法院作成妥適迅速之裁判，爰增訂第四項。五、關係人進行非訟程序，應依誠實信用原則為之，就其提出之事實為真實、完全及具體之陳述，以發現真實，促進程序，而保護實體及程序利益、維持程序經濟，爰增訂第五項。
 
 * 33 關於事實及證據之調查、通知及裁定之執行，得依囑託為之。
 
@@ -137,6 +149,18 @@
 * 35 訊問應作成筆錄。
 
 > 釋：原條文第十九條條次變更為本條，內容未修正。
+
+* 35.1 民事訴訟法第一百六十八條至第一百八十條及第一百八十八條規定，於非訟事件準用之。
+
+> 釋：一、本條新增。二、聲請人或相對人有死亡、喪失資格或其他事由致不能續行程序，在有依法令得續行程序之人情形，於非訟事件程序上應如何處理，本法並未規定，為杜爭議，明定民事訴訟法有關訴訟程序當然停止之規定，於非訟事件準用之，俾資適用，爰設本條。
+
+* 35.2 聲請人因死亡、喪失資格或其他事由致不能續行程序，而無依法令得續行程序之人，其他有聲請權人得於該事由發生時起十日內聲明承受程序；法院亦得依職權通知於一定期間內聲明承受程序。依聲請或依職權開始之事件，雖無人承受程序，法院認為必要時，應續行之。
+
+> 釋：一、本條新增。二、為求程序之經濟及便利，聲請人因死亡、喪失資格或其他事由致不能續行程序，而無依法令得續行程序之人時，應許其他有聲請權人得聲明承受程序，俾以利用同一非訟程序；惟非訟事件要求迅速終結，其得聲明承受之期限自不宜過長，如逾事由發生時起十日未為聲明，即喪失其聲明權，嗣後所為之聲明自不合法。又為免程序延宕，法院亦得依職權通知其他有聲請權人於所定期間內聲明承受程序，以利程序順利進行；該期限長短，核屬法院程序指揮權之範圍。爰設第一項。三、非訟事件無論係依聲請或依職權開始，如程序標的之關係人均無處分權，雖無人承受程序，法院認為必要，應續行程序，爰設第二項。
+
+* 35.3 聲請人與相對人就得處分之事項成立和解者，於作成和解筆錄時，發生與本案確定裁定同一之效力。前項和解有無效或得撤銷之原因者，聲請人或相對人得請求依原程序繼續審理，並準用民事訴訟法第三百八十條第四項規定。因第一項和解受法律上不利影響之第三人，得請求依原程序撤銷或變更和解對其不利部分，並準用民事訴訟法第五編之一第三人撤銷訴訟程序之規定。
+
+> 釋：一、本條新增。二、為迅速圓融處理聲請人與相對人間之紛爭，就聲請人與相對人間得處分事項之爭執事件，應尊重聲請人及相對人和解之意願，以消弭紛爭，並終結程序。又聲請人與相對人成立和解時，須製作和解筆錄，且於和解筆錄作成時，發生與本案確定裁定相同之效力，爰設第一項。三、和解係基於聲請人及相對人之意願以解決雙方之紛爭，並終結程序，惟第一項之和解如具有無效或得撤銷之原因，前述終結程序之機能即因此動搖，故為保障參與主體之權益，明定準用訴訟上和解成立後，繼續審判之請求期間、應踐行之程式等相關規定，爰設第二項。四、因聲請人及相對人成立第一項之和解，致第三人固有利益或法律地位受法律上不利影響時，為保障其利益及程序權，爰設第三項。
 
 * 36 非訟事件之裁判，除法律另有規定外，由獨任法官以裁定行之。命關係人為一定之給付及科處罰鍰之裁定，得為執行名義。民事訴訟法第二百三十二條、第二百三十三條及第二百三十六條至第二百三十八條之規定，於第一項裁定準用之。
 
@@ -154,9 +178,9 @@
 
 > 釋：一、原條文第二十二條條次變更為本條。二、非訟事件裁定之確定證明書，並非每一關係人皆屬需要，原條文第一項法院書記官應依職權自動付與確定證明書之規定，徒增實務困擾，造成司法資源之浪費，爰參照民事訴訟法第三百九十九條第一項之規定予以修正，以符實際。三、非訟事件裁定確定證明書實際上雖由法院書記官所付與，惟將來或有部分事件，會依第四條所定事務分配辦法，歸由簡易庭受理，爰修正第二項，以增強適用彈性。
 
-* 40 法院認為不得抗告之裁定不當時，得撤銷或變更之。因聲請而為裁定者，其駁回聲請之裁定，非因聲請不得依前項規定為撤銷或變更之。
+* 40 法院認為不得抗告之裁定不當時，得撤銷或變更之。因聲請而為裁定者，其駁回聲請之裁定，非因聲請不得依前項規定為撤銷或變更之。裁定確定後而情事變更者，法院得撤銷或變更之。法院為撤銷或變更裁定前，應使關係人有陳述意見之機會。裁定經撤銷或變更之效力，除法律別有規定外，不溯及既往。
 
-> 釋：一、原條文第二十三條條次變更為本條。二、原條文第一項與第三項合併，以精簡條文。三、法院依第二項規定撤銷或變更原駁回聲請之裁定時，應以法院認為原裁定不當者為限，爰於第二項增列「依前項規定」等字，以杜疑義。
+> 釋：一、原條文第一項及第二項未修正。二、非訟事件裁定確定後，如遇情事變更，致原裁定失其公平性及妥當性，此際應認法院得撤銷或變更原裁定，爰增訂第三項。三、為保障關係人之程序權，避免其權利被不當侵害，爰增訂第四項。四、非訟事件裁定之得撤銷或變更，固在尋求非訟事件之妥當性及公平性，惟對善意第三人之權益亦應兼顧，除法律別有規定外，基於交易安全之維護及信賴利益之保護，應認其效力不溯及既往，爰增訂第五項。
 
 * 41 因裁定而權利受侵害者，得為抗告。駁回聲請之裁定，聲請人得為抗告。因裁定而公益受侵害者，檢察官得為抗告。
 
@@ -170,9 +194,9 @@
 
 > 釋：一、原條文第二十五條條次變更為本條。二、提起抗告，向為裁定之原法院為之，法院作業較為便利，亦符合非訟事件之處理程序貴求迅速之旨。如逕向抗告法院為之，不僅原法院無從知悉，抗告法院亦因必須調閱卷宗而多所勞費，爰參照民事訴訟法第四百八十八條第一項規定，刪除原條文第一項中「或抗告法院」等字。三、修正第二項準用條文之號次。又以言詞為抗告時，應在法院書記官前為之，以便利書記官作成筆錄，爰增設準用第二十九條第二項之規定，以利適用。
 
-* 44 抗告，除法律另有規定外，由地方法院以合議裁定之。抗告法院之裁定，應附理由。
+* 44 抗告，除法律另有規定外，由地方法院以合議裁定之。抗告法院為裁定前，應使因該裁定結果而法律上利益受影響之關係人有陳述意見之機會。但抗告法院認為不適當者，不在此限。抗告法院之裁定，應附理由。
 
-> 釋：一、原條文第二十六條條次變更為本條。二、原條文未修正，列為第二項。三、將來非訟事件依其種類之不同，其第一審法院或為地方法院或為簡易庭，為使抗告程序一致，爰參考民事訴訟法第四百三十六條之一之立法例，規定抗告由地方法院以合議裁定之。又因非訟事件態樣日趨繁雜，將來其他法律或會就某些特定事件另定其救濟程序，故並設除外規定，以資兼顧。
+> 釋：一、原條文第一項未修正。二、為保障關係人之程序權，避免不當侵害其權益，抗告法院為裁定前，應使因其裁定結果而法律上利益受影響之關係人有陳述意見之機會。惟如抗告法院認為不適當時，則不在此限，以彈性因應。爰增訂第二項。三、原條文第二項未修正，移列第三項。
 
 * 45 抗告法院之裁定，以抗告不合法而駁回者，不得再為抗告。但得向原法院提出異議。前項異議，準用民事訴訟法第四百八十四條第二項及第三項之規定。除前二項之情形外，對於抗告法院之裁定再為抗告，僅得以其適用法規顯有錯誤為理由。
 
@@ -181,6 +205,10 @@
 * 46 抗告及再抗告，除本法另有規定外，準用民事訴訟法關於抗告程序之規定。
 
 > 釋：原條文第二十八條條次變更為本條，內容未修正。
+
+* 46.1 民事訴訟法第五編再審程序之規定，於非訟事件之確定裁定準用之。除前項規定外，有下列各款情形之一者，不得更以同一事由聲請再審：一、已依抗告、聲請再審、聲請撤銷或變更裁定主張其事由，經以無理由駁回者。二、知其事由而不為抗告；或抗告而不為主張，經以無理由駁回者。
+
+> 釋：一、本條新增。二、非訟事件之本案終局確定裁定如程序有重大瑕疵或內容顯有不當，自應事後給予救濟之途徑，以保障關係人之程序權，爰設第一項，規定準用民事訴訟法第五編再審程序之規定。三、再審之目的在匡正確定裁判之不當，保障關係人之權益，惟就曾以同一事由為抗告、聲請再審、聲請撤銷或變更裁定，經以無理由駁回，或知其事由而不為抗告，或抗告而不為主張，經以無理由駁回，自應予限制，以避免關係人一再聲請再審，致程序被濫用，耗費司法資源，爰設第二項。
 
 * 47 因法院之裁定有為一定行為、不為一定行為或忍受一定行為之義務者，經命其履行而不履行時，除法律另有規定外，得處新臺幣三萬元以下罰鍰，並得繼續命其履行及按次連續各處新臺幣三萬元以下罰鍰。前項裁定，應附理由，於裁定前應為警告。對於第一項裁定，得為抗告；抗告中應停止執行。
 
@@ -338,6 +366,10 @@
 
 > 釋：一、本條新增。二、最高限額抵押權雖曾經地政機關辦理登記，惟其債權額未確定，故於聲請拍賣抵押物程序易生爭執，為兼顧債權人及債務人雙方之權益，法院於裁定前，亦應使債務人就所擔保之「現存」債權額有陳述意見之機會，爰增訂本條。又為免阻礙社會大眾對最高限額抵押權制度之利用，法院於債務人陳述意見後，即應參照現有相關之法律、判例（例如最高法院七十一年台抗字第三○六號判例），依職權逕為准駁之裁定，毋庸另為明文，一併敘明。
 
+* 74.1 第七十二條所定事件程序，關係人就聲請所依據之法律關係有爭執者，法院應曉諭其得提起訴訟爭執之。前項情形，關係人提起訴訟者，準用第一百九十五條規定。
+
+> 釋：一、本條新增。二、拍賣擔保物事件，因非訟程序採形式審查，如關係人就該聲請所依據之前提法律關係是否存在有實質上爭執時，法院即應曉諭關係人得就該法律關係之存否提起訴訟，以資解決，爰設第一項。至於闡明方法，法院得視情形，於審理中或裁定上為之，自不待言。三、關係人就聲請所依據之法律關係提起訴訟時，在其主張該擔保物權之設定係遭偽造或變造之情形，宜準用本法第一百九十五條第一項及第二項規定，使其於准許拍賣擔保物之裁定送達後二十日內提起確認之訴者，停止強制執行；惟擔保物權人聲請提供相當擔保者，仍得繼續強制執行。倘關係人係主張前開事由以外之情事，而訴請確認該擔保物權或其所擔保之債權不存在，此際宜準用第一百九十五條第三項規定，法院仍得依關係人之聲請，裁量是否許其提供相當並確實之擔保，以停止強制執行，用資兼顧擔保物權人、主債務人及擔保物所有權人之權益，並貫徹大法官釋字第一八二號解釋意旨，爰設第二項。
+
 * 75 信託法第十六條所定聲請變更信託財產管理方法事件、第二十八條第二項所定聲請信託事務之處理事件、第三十五條第一項第三款所定聲請許可將信託財產轉為自有財產或於該信託財產上設定或取得權利事件、第三十六條第一項但書所定受託人聲請許可辭任事件、第二項所定聲請解任受託人事件、第五十二條第一項所定聲請選任信託監察人事件、第五十六條所定信託監察人聲請酌給報酬事件、第五十七條所定聲請許可信託監察人辭任事件、第五十八條所定聲請解任信託監察人事件、第五十九條所定聲請選任新信託監察人事件及第六十條第二項所定聲請檢查信託事務、選任檢查人及命為其他必要之處分事件，均由受託人住所地之法院管轄。信託法第三十六條第三項所定聲請選任新受託人或為必要之處分事件，由原受託人住所地之法院管轄。前二項之受託人或原受託人有數人，其住所不在一法院管轄區域內者，各該住所地之法院俱有管轄權。信託法第四十六條所定聲請選任受託人事件，由遺囑人死亡時住所地之法院管轄。
 
 > 釋：一、本條新增。二、信託係一種「管理或處分信託財產之關係」（參見信託法第一條），與實施或曾經實施管理行為之人及地攸關，爰參考日本非訟事件手續法第七十一條之二及韓國非訟事件程序法第三十九條之立法例，將信託法中與法院業務有關之非訟事件：即信託法第十六條、第二十八條第二項、第三十五條第一項第三款、第三十六條第一項但書至第三項、第四十六條、第五十二條第一項、第五十六條、第五十七條、第五十八條、第五十九條及第六十條第二項之規定，依其情形，於第一項、第二項及第四項分別定其管轄法院，以利適用。三、受託人或原受託人有數人，而其住所地不在同一法院轄區內時，何法院有管轄權，宜有明文，爰參考民事訴訟第二十條前段規定意旨增訂第三項，以符便民之旨。
@@ -482,273 +514,273 @@
 
 > 釋：原條文第四十七條條次變更為本條，內容未修正。
 
-* 108 關於失蹤人之財產管理事件，由其住所地之法院管轄。
+* 108 （刪除）
 
-> 釋：原條文第四十八條條次變更為本條，內容未修正。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 109 失蹤人未置財產管理人者，其財產管理人依下列順序定之：一、配偶。二、父母。三、成年子女。四、與失蹤人同居之祖父母。五、家長。不能依前項規定定財產管理人時，法院得因利害關係人或檢察官之聲請，選任財產管理人。財產管理人之權限，因死亡、受監護、輔助或破產之宣告或其他原因消滅時，準用前二項之規定。
+* 109 （刪除）
 
-> 釋：民國九十八年十一月二十三日施行修正之民法總則編及親屬編（下稱九十八年修正後民法）已將「禁治產」改為「監護」，爰配合修正第三項規定。又九十八年修正後民法另增訂輔助宣告制度，受輔助宣告之人為一定特定行為須經輔助人之同意，無法達到有效管理失蹤人財產之目的，應認不宜擔任財產管理人為當，並於第三項增列財產管理人如受輔助宣告，亦準用前二項規定。至於依消費者債務清理條例規定受法院裁定開始清算程序之債務人，依該條例第八十四條規定，準用其他法令關於破產人資格、權利限制之規定，故財產管理人受法院裁定開始清算程序者，自可準用第三項規定。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 110 財產管理人有數人者，關於失蹤人之財產管理方法依協議定之；不為協議或協議不成時，財產管理人或利害關係人得聲請法院酌定之。
+* 110 （刪除）
 
-> 釋：一、本條新增。二、財產管理人有數人時，關於失蹤人財產之管理方法應依何而定，原法付之闕如，爰增訂本條，以資適用。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 111 財產管理人不能勝任或管理不適當時，法院得依利害關係人或檢察官之聲請改任之；其由法院選任者，法院認為必要時得依職權改任之。
+* 111 （刪除）
 
-> 釋：一、原條文第五十條條次變更為本條。二、參照第一百零九條第二項規定，增列檢察官得聲請法院改任遺產管理人之規定，以維公益。另參照民事訴訟法第五百八十五條第一項規定，於末句「得」字下增加「依職權」三字，俾資明確。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 112 法院選任或改任財產管理人時，應訊問利害關係人意見。
+* 112 （刪除）
 
-> 釋：一、原條文第五十一條條次變更為本條。二、將「詢問」修正為「訊問」，俾與第七十條第二項、第一百七十二條第二項及第一百七十三條第二項等條文用語一致。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 113 關於財產管理人之選任，法院為裁定前，得因利害關係人或檢察官之聲請或依職權，就失蹤人財產之管理，為必要之處分。
+* 113 （刪除）
 
-> 釋：一、原條文第四十九條第二項中關於法院得以裁定命為必要處分部分，移列於本條，並略作文字修正。二、為保護失蹤人之財產及公益，增列法院得因檢察官之聲請或依職權，就失蹤人財產之管理為必要處分之規定。又法院所為之必要處分如有不當，亦得因利害關係人或檢察官之聲請或依職權予以撤銷或變更，乃屬當然，附此敘明。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 114 失蹤人財產之取得、設定、喪失或變更，依法應登記者，財產管理人應向該管登記機關為管理人之登記。
+* 114 （刪除）
 
-> 釋：一、原條文第四十九條第四項移列為本條，並略作文字修正。二、失蹤人財產之取得、設定、喪失或變更依法應登記者，為維護交易安全，無論其財產管理人依何種方式產生，均應向該管登記機關為管理人之登記，以公示何人為失蹤人之正當財產管理人，原條文第四項文義不甚明確，爰修正為「應為管理人之登記」，以利適用。又前段之財產管理人，已能涵蓋依各種方式產生之財產管理人，爰將原條文第四項條文後段「其由法院選任或改任者亦同」部分刪除
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 115 財產管理人應作成管理財產目錄，並應經公證人公證，其費用由失蹤人之財產負擔之。
+* 115 （刪除）
 
-> 釋：一、原條文第五十二條條次變更為本條。二、為保護失蹤人之財產及交易安全，爰刪除「法院所選任之」六字，俾使所有失蹤人之財產管理人均有依本條規定作成管理財產目錄之義務。三、為促使財產管理人審慎作成財產管理目錄，爰參考日本家事審判規則第三十六條第二項規定，增訂管理財產目錄應經公證人公證之規定。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 116 法院得因利害關係人或檢察官之聲請，命財產管理人報告管理財產狀況或計算；財產管理人由法院選任者，並得依職權為之。前項裁定，不得聲明不服。
+* 116 （刪除）
 
-> 釋：一、原條文第五十三條條次變更為本條。二、刪除原條文第一項中「以裁定」三字，以精簡文字。又不論是否為法院選任之失蹤人財產管理人，其管理財產是否妥善，均與失蹤人及利害關係人利害攸關，為督促其善盡職責，爰參考日本家事審判規則第三十三條規定意旨，增列利害關係人或代表公益之檢察官得聲請法院命財產管理人報告管理財產狀況或計算之規定，並參考民事訴訟法第五百八十五條第一項體例修正本條第一項。三、第二項不修正。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 117 利害關係人得釋明原因，向法院聲請閱覽前條之報告及有關計算之文件，或預納費用聲請付與繕本、影本或節本。
+* 117 （刪除）
 
-> 釋：一、原條文第五十四條條次變更為本條。二、略作文字修正，並參考第三十九條及民事訴訟法第二百四十二條之用語，將末句修正為「付與繕本、影本或節本」。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 118 財產管理人應以善良管理人之注意，保存財產，並得為有利於失蹤人之利用或改良行為。但其利用或改良有變更財產性質之虞者，非經法院許可，不得為之。
+* 118 （刪除）
 
-> 釋：一、原條文第五十五條條次變更為本條。二、為維護失蹤人財產之利益，應許財產管理人得就該財產，為有利於失蹤人之利用或改良，惟利用或改良致變更財產性質時，或會損及失蹤人之利益，故於有變更之虞前，即應先經法院許可，爰於但書增列「之虞」二字，俾更明確。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 119 法院得命財產管理人就財產之管理及返還，供相當之擔保，並得以裁定增減、變更或免除之。前項擔保，準用民事訴訟法關於訴訟費用擔保之規定。
+* 119 （刪除）
 
-> 釋：一、原條文第五十六條條次變更為本條。二、刪除第一項首句之「以裁定」三字。另總則章第四十一條已明定，因裁定而權利受侵害者得為抗告，爰刪除原條文第二項得為抗告之規定。三、原條文就財產管理人依第一項規定所供擔保之效力、何種情況下得返還等問題，均無明文，故增列第二項準用民事訴訟費用擔保之規定，以利適用。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 120 法院按財產管理人與失蹤人之關係、管理事務之繁簡及其他情形，得就失蹤人之財產，酌給財產管理人相當報酬。
+* 120 （刪除）
 
-> 釋：一、原條文第五十七條條次變更為本條。二、法院就失蹤人之財產酌給財產管理人報酬，除應審酌財產管理人與失蹤人之關係親疏外，關於管理事務之繁簡、管理方法是否須備專門技術與智慧等，亦應在審酌範圍之內，方能周全，爰於「及其他情形」之上增列「、管理事務繁簡」等字，以期明確適用。
+> 釋：一、本條刪除。二、家事事件法第四編第八章就失蹤人財產管理事件已有整體規範，爰配合刪除本條。
 
-* 121 民法第一千零零二條第一項所定指定夫妻住所事件，由夫或妻住所地之法院管轄。前項事件，法院於裁定前，應使夫妻有陳述意見之機會。但有礙難情形者，不在此限。
+* 121 （刪除）
 
-> 釋：一、本條新增。二、民法第一千零零二條增訂法院指定夫妻住所之規定，於非訟事件法應增訂程序規定，以資配合。三、夫妻共同住所之指定，宜尊重當事人意願，故法院於裁定前，應使夫妻雙方有陳述意見之機會；惟夫妻之一方或有行方不明或不願到場陳述之情形，為免案件因而延滯不決，爰設「有礙難情形者，不在此限」之例外規定，以資兼顧。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 122 民法第一千零五十五條所定夫妻離婚有關對於未成年子女權利義務之行使或負擔之酌定、改定或變更事件，由未成年子女住所或居所地之法院管轄。未成年子女有數人，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權。第一項之事件有理由時，程序費用由未成年子女之父母或父母之一方負擔。
+* 122 （刪除）
 
-> 釋：一、原條文第七十一條之一條次變更為本條。二、依法院組織法第九條第三款規定，法律規定之非訟事件本由地方法院管轄，原條文第一項末句「法院管轄」前，無贅列「地方」二字之必要，爰予刪除，俾與本法有關管轄規定之體例一致。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 123 子女為滿七歲以上之未成年人者，於前條第一項事件，有非訟能力。
+* 123 （刪除）
 
-> 釋：子女為滿七歲以上之未成年人者，於前條第一項事件，有非訟能力。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 124 關於第一百二十二條第一項事件，法院為裁定前，得依聲請命為必要之保全處分。前項裁定，不得抗告。第一項保全處分，準用民事訴訟法保全程序之規定。
+* 124 （刪除）
 
-> 釋：一、原條文第七十一條之三條次變更為本條。二、修正第一項引用條文之條次，其餘不修正。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 125 法院為審酌子女之最佳利益，得徵詢主管機關或社會福利機構之意見或請其進行訪視，就民法第一千零五十五條之一所定事項，為事實之調查，並提出調查報告及建議。法院認為必要時，亦得命少年調查官為前項之調查。
+* 125 （刪除）
 
-> 釋：原條文第七十一條之四條次變更為本條，內容未修正。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 126 法院認為必要時，得通知主管機關或社會福利機構相關人員或少年調查官於期日到場陳述意見。
+* 126 （刪除）
 
-> 釋：原條文第七十一條之五條次變更為本條，內容未修正。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 127 法院依民法第一千零五十五條之規定，為酌定、改定或變更時，得命交付子女、未行使或負擔權利義務之一方與未成年子女會面交往之方式與期間、給付扶養費、交付身分證明文件或其他財物，或命為相當之處分，並得訂定必要事項。前項扶養費之給付，法院得依聲請或依職權，命為一次給付或分期給付。分期給付遲誤一期履行者，其後之期間視為亦已到期。第一項裁定得為執行名義。
+* 127 （刪除）
 
-> 釋：原條文第七十一條之六條次變更為本條，內容未修正。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 128 子女為滿七歲以上之未成年人者，法院就前條事件為裁定前，應聽取其意見。但有礙難情形或恐有害其健康者，不在此限。
+* 128 （刪除）
 
-> 釋：原條文第七十一條之七條次變更為本條，內容未修正。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 129 第一百二十七條事件處理中，夫妻雙方對該事件達成協議，而其協議符合子女最佳利益時，法院應將其協議內容記載於筆錄。前項記載於筆錄之協議，應於十日內將正本送達於當事人及利害關係人。第一項記載於筆錄之協議得為執行名義。
+* 129 （刪除）
 
-> 釋：一、原條文第七十一條之八條次變更為本條。二、修正第一項引用條文之條次，其餘不修正。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 130 第一百二十二條至前條之規定，於婚姻無效或撤銷、確認婚姻不成立、婚姻視為消滅，與法院宣告停止親權、監護權、父母不繼續共同生活達六個月以上及非婚生子女經認領時，有關對於未成年子女權利義務之行使負擔事件，準用之。
+* 130 （刪除）
 
-> 釋：民國九十六年五月二十三日修正施行之民法親屬編（下稱九十六年修正民法）第九百八十八條之一增訂重婚之雙方當事人因善意且無過失信賴一方前婚姻消滅之兩願離婚登記或離婚確定判決而結婚者，重婚之前婚姻自後婚姻成立之日起視為消滅，其效力除另有規定外，準用離婚之效力，故前婚姻所生未成年子女權利義務之行使負擔，即有準用離婚事件規定之必要。而第一千零八十九之一增訂父母不繼續共同生活六個月以上之未成年子女權利義務行使負擔之規定，與民法第一千零五十五條所定事件性質相近，亦有準用之必要，爰修正本條。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 131 有關婚姻或親子關係之訴訟，已繫屬於法院者，法院應將第一百二十二條及前條所定事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判。前項裁定不得聲明不服。
+* 131 （刪除）
 
-> 釋：婚姻無效或撤銷婚姻與確認婚姻成立或不成立及離婚或夫妻同居之訴，係有關婚姻關係之訴訟，而收養無效、撤銷收養、確認收養關係成立或不成立及終止收養關係之訴，否認或認領子女、否認推定生父之訴，認領無效或撤銷認領之訴及就母再婚後所生子女確定其父之訴，宣告停止親權或撤銷其宣告之訴，則屬有關親子關係之訴訟，為因應將來可能新增之相關訴訟類型亦一併處理，以免掛一漏萬，爰修正第一項。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 131.1 民法第一千零五十九條第五項、第一千零五十九條之一第二項及第一千零七十八條第三項所定變更子女姓氏事件，由子女住所地或居所地之法院管轄。第一百二十二條第二項、第三項、第一百二十三條、第一百二十五條、第一百二十六條及第一百二十八條之規定，於前項事件準用之。
+* 131.1 （刪除）
 
-> 釋：一、本條新增。二、配合九十六年修正民法新增變更子女姓氏事件，爰增訂本條。三、變更子女姓氏事件，由與子女關係最密切之法院即子女之住、居所地法院管轄，可保護子女之利益，便於法院審核，參酌本法第一百二十二條第一項規定，規定第一項管轄法院。四、為維護未成年子女之利益，於第二項規定準用之相關條文；其中第一百二十二條第三項規定，應僅限聲請變更未成年子女姓氏時準用之，至於成年子女部分，則應依本法第二十一條規定辦理。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 131.2 民法第一千零八十六條第二項所定選任特別代理人事件，由未成年子女住所地或居所地之法院管轄。第一百二十條、第一百二十二條第二項、第三項及第一百二十三條至第一百二十八條之規定，於前項事件準用之。
+* 131.2 （刪除）
 
-> 釋：一、本條新增。二、配合九十六年修正民法第一千零八十六條第二項新增選任未成年子女特別代理人之規定，爰增訂本條。三、為保護未成年子女之利益，參酌本法第一百二十二條第一項，於第一項規定管轄法院，並於第二項訂定準用之相關條文。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 132 民法第一千零八十九條第二項所定父母對於未成年子女重大事項之行使酌定事件，由未成年子女之住所或居所地之法院管轄。未成年子女有數人，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權。
+* 132 （刪除）
 
-> 釋：一、原條文第七十一條之十一條次變更為本條。二、依法院組織法第九條第三款規定，法律規定之非訟事件本由地方法院管轄，原條文第一項末句「法院管轄」前，無贅列「地方」二字之必要，爰予刪除。
+> 釋：一、本條刪除。二、家事事件法第四編第二章及第三章就婚姻非訟事件及親子非訟事件已有整體規範，爰配合刪除本條。
 
-* 133 民法第一千零七十九條第一項所定認可收養子女事件，由收養人住所地之法院管轄；收養人在中華民國無住所者，由被收養人住所地或所在地之法院管轄。前項事件，以收養人及被收養人為聲請人。
+* 133 （刪除）
 
-> 釋：配合九十六年修正民法第一千零七十九條將原條文項次變更，修正第一項文字。
+> 釋：一、本條刪除。二、家事事件法第四編第四章就收養事件已有整體規範，爰配合刪除本條。
 
-* 134 前條第一項事件之聲請，應附具下列文件：一、收養契約書。二、收養人及被收養人之身分證明文件。三、被收養人為未成年人時，收養人職業、健康及有關資力之證明文件。四、夫妻之一方被收養時，他方之同意書。但有民法第一千零七十六條但書情形者，不在此限。五、經公證之被收養人本生父母同意書。但有民法第一千零七十六條之一第一項但書、第二項但書或第一千零七十六條之二第三項情形者，不在此限。六、收養人或被收養人為外國人時，收養符合其本國法之證明文件。前項文件在境外作成者，應經當地中華民國駐外機構認證或證明；如係外文，並應添具中文譯本。
+* 134 （刪除）
 
-> 釋：配合九十六年修正民法第一千零七十六條規定，爰修正第一項第四款；配合修正民法第一千零七十六條之一第一項、第二項及第一千零七十六條之二第三項規定，爰修正第一項第五款。
+> 釋：一、本條刪除。二、家事事件法第四編第四章就收養事件已有整體規範，爰配合刪除本條。
 
-* 135 被收養人之本生父母為未成年人而未結婚者，法院為認可收養之裁定前，應聽取其意見。但有礙難情形者，不在此限。
+* 135 （刪除）
 
-> 釋：一、本條新增。二、未滿七歲未成年人被收養時，由法定代理人代為意思表示並代受意思表示，滿七歲之未成年人被收養時，應得其法定代理人之同意，民法第一千零七十九條第二項、第三項定有明文。因子女出養後，於收養關係存續中，其與本生父母間之權利義務均停止，關係重大；為維護當事人之權益，爰增設被收養人之本生父母縱未成年且未結婚時，法院於裁定前，亦應聽取其意見，以供審酌參考。惟因未成年人出養其非婚生子女之緣由、情狀不一，為免對其造成二度傷害並兼顧事件進行，併設但書之例外規定，讓法院得視實際情況，決定是否聽取，用資兼顧。
+> 釋：一、本條刪除。二、家事事件法第四編第四章就收養事件已有整體規範，爰配合刪除本條。
 
-* 136 民法第一千零八十條第二項、第一千零八十條之一第一項所定聲請認可、許可終止收養事件，由養子女住所地之法院管轄。
+* 136 （刪除）
 
-> 釋：配合九十六年修正民法新增第一千零八十條第二項及原第一千零八十條第五項條次調整，爰修正並增列文字。
+> 釋：一、本條刪除。二、家事事件法第四編第四章就收養事件已有整體規範，爰配合刪除本條。
 
-* 137 第一百二十三條至第一百二十八條之規定，於有關收養事件準用之。法院認可未成年人被收養前，得准收養人與未成年人共同生活一段期間，供法院決定之參考；共同生活期間，對於未成年人權利義務之行使負擔，由收養人為之。
+* 137 （刪除）
 
-> 釋：一、本條新增。二、為保護未成年子女之利益，本法於第一百二十三條至第一百二十八條就民法第一千零五十五條所定夫妻離婚後，有關對於未成年子女權利義務之行使或負擔之酌定、改定或變更事件之處理，設有特別規定，上開條文於養子女為未成年人之認可收養及終止收養事件，亦有準用之必要，爰增訂本條第一項，俾資周全。三、法院在許可收養未成年子女前，讓收養者與被收養之未成年人共同生活一段時間，有利於法院為認可收養與否決定時之參考，現行兒童福利法第二十七條第三項即定有明文，惟兒童福利法屬兒童福利之行政法規，而收養制度攸關親屬及身分關係，是收養程序移至非訟程序中加以規範，體例較一致。又前開准許共同生活期間，未成年人實際由收養人而非其本生父母或監護人保護教養，爰增列第二項規定。
+> 釋：一、本條刪除。二、家事事件法第四編第四章就收養事件已有整體規範，爰配合刪除本條。
 
-* 138 民法第一千零九十四條第三項、第一千一百零六條第一項、第一千一百零六條之一第一項之選定、另行選定或改定監護人事件，由未成年人住所地或所在地之法院管轄。第一百二十二條第二項、第三項、第一百二十三條至第一百二十八條之規定，於前項情形準用之。
+* 138 （刪除）
 
-> 釋：配合九十八年修正後民法第一千零九十四條條次變更；第一千一百零六條刪除親屬會議相關規定，新增由法院另行選定監護人；及第一千一百零六條之一增訂法院改定監護人規定，爰修正並增列第一項文字。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 138.1 民法第一千零九十三條第二項、第一千零九十四條第二項、第一千零九十九條所定報告或陳報事件，由未成年人住所地或所在地之法院管轄。
+* 138.1 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千零九十三條第二項之監護人報告事件、第一千零九十四條第二項監護人報告事件、第一千零九十九條之監護人陳報事件，爰增訂本條。三、依民法第一千一百零三條第二項規定，法院於必要時，得命監護人提出監護事務之報告、財產清冊或結算書，檢查監護事務或受監護人之財產狀況。該項規定所指之法院，如其監護人係法定監護人者，乃指民法第一千零九十四條第二項所定之法院，若其監護人係由法院所選定之監護人，則本項之法院，係指選定之法院；再者，依民法第一千一百零八條規定，監護人死亡時，其無繼承人或繼承人有無不明者，新監護人應逕行辦理結算，連同依第一千零九十九條規定開具財產清冊陳報法院，此時新監護人，應依民法第一千零九十九條規定，向未成年人住所地或所在地之法院陳報。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 138.2 民法第一千零九十五條所定監護人辭任事件，由未成年人住所地或所在地之法院管轄。第一百二十四條至第一百二十六條及第一百二十八條之規定，於前項情形準用之。
+* 138.2 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千零九十五條監護人辭任事件，爰增訂第一項。三、為保障受監護人之利益，第一百二十四條至第一百二十六條及第一百二十八條關於保護未成年子女之規定，於前項情形均應予準用，爰增訂第二項。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 138.3 民法第一千零九十七條第二項所定酌定監護人行使權利事件，由未成年人住所地或所在地之法院管轄。第一百二十四條之規定，於前項情形準用之。
+* 138.3 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千零九十七條第二項酌定監護人行使權利事件，爰增訂第一項。三、為保障受監護人之利益，第一百二十四條關於為必要保全處分之規定，於前項情形應予準用，爰增訂第二項。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 138.4 民法第一千一百零四條所定酌定監護人報酬事件，由未成年人住所地之法院或選定、另行選定、改定監護人之法院管轄。
+* 138.4 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千一百零四條酌定監護人報酬事件，爰增訂本條。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 138.5 民法第一千零九十八條第二項所定選任特別代理人事件，由未成年人住所地或居所地之法院管轄。第一百三十一條之二第二項之規定，於前項事件準用之。
+* 138.5 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正後民法新增選任受監護人特別代理人事件，爰增訂本條。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 138.6 民法第一千一百零一條第二項所定許可監護人行為事件，由未成年人住所地或居所地之法院管轄。
+* 138.6 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正後民法新增第一千一百零一條第二項受監護人特定財產處分行為事件，爰增訂本條。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
 * 139 （刪除）
 
 > 釋：一、本條刪除。二、依九十八年修正後民法第一千一百十一條第一項，法院為監護之宣告時，應依職權選定監護人，刪除原第一項規定以法定監護人優先及第二項不能依前項規定定其監護人始由法院選定之規定；而法院為監護宣告之裁定時，應同時選定監護人之相關程序，業已在九十八年修正之民事訴訟法第六百零四條明定，故原規定「民法第一千一百十一條第二項監護人選定事件」，即無於非訟事件法規定之必要，爰予以刪除。
 
-* 139.1 民法第一千一百十二條之一指定、撤銷或變更監護人執行職務範圍事件，由選定監護人之法院或受監護宣告之人住所地或居所地之法院管轄。
+* 139.1 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正後民法第十四條及第一千一百十二條之一之規定，就指定、撤銷或變更監護人執行職務範圍事件，規定由選定監護人之法院或受監護宣告之人住所地或居所地之法院管轄，爰增訂第一項；又法院依民法第一千一百十一條第一項及第一千一百十二條之一第一項規定，於為監護宣告同時選定數監護人，並依職權指定其共同或分別執行職務之範圍者，非屬本條所指之指定監護人執行職務範圍事件，其指定應由為監護宣告之法院為之。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 139.2 第一百三十八條至第一百三十八條之六之規定，於監護宣告事件準用之。受監護宣告之人，於前條及前項事件，有非訟能力。
+* 139.2 （刪除）
 
-> 釋：一、本條新增。二、九十八年修正後民法第一千一百十三條規定，民法第一千零九十五條、第一千零九十七條第二項、第一千零九十八條第二項、第一千零九十九條、第一千一百零一條第二項、第一千一百零四條、第一千一百零六條及第一千一百零六條之一等未成年人監護之規定，於成年人之監護準用之，而未成年人依民法第十四條受監護之宣告者，適用本章第二節成年人監護之規定，復為民法第一千一百零九條之二所明定，是前開民法所定事件，為監護宣告，自有準用之必要，爰增訂第一項。三、前條及第一項之事件，受監護宣告之人均可獨立提出聲請，爰增訂第二項，明定其有非訟能力，以保障其程序權。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 139.3 第一百三十八條、第一百三十八條之二至第一百三十八條之五及第一百三十九條之一之規定，於輔助宣告事件準用之。
+* 139.3 （刪除）
 
-> 釋：一、本條新增。二、九十八年修正後民法第一千一百十三條之一第二項規定，民法第一千零九十五條、第一千零九十八條第二項、第一千一百零四條、第一千一百零六條、第一千一百零六條之一及第一千一百十二條之一規定，於輔助人及有關輔助宣告準用之，是前開民法所定事件，於輔助宣告，自有準用之必要；再者，輔助人有數人，對於受輔助宣告之人重大事項權利之行使意思不一致時，宜類推適用民法第一千零九十七條第二項規定，得聲請法院依受輔助宣告之人之最佳利益，酌定由其中一輔助人行使之，是亦有準用其事件程序規定之必要；爰增訂本條。又受輔助宣告之人，依非訟事件法第十一條準用民事訴訟法規定，受輔助宣告之人就關於財產權訴訟事件為訴訟行為，固須得輔助人之同意，但就婚姻等身分之人事訴訟事件，則有訴訟能力，故受輔助宣告之人，就身分非訟事件，自有非訟能力。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 140 由法院所選定之監護人，有下列各款情形之一者，得辭任其職務：一、滿六十歲。二、因身心障礙或疾病不能執行監護。三、住所或居所與法院或受監護人所在地隔離，不便執行監護。四、有其他重大事由。
+* 140 （刪除）
 
-> 釋：配合九十八年修正後民法第一千零九十五條規定，酌予文字修正。
+> 釋：一、本條刪除。二、家事事件法第四編第五章、第十章及第十一章分別就未成年人監護事件、監護宣告事件及輔助宣告事件已有整體規範，爰配合刪除本條。
 
-* 140.1 民法第一千一百二十條但書所定扶養費給付事件，由受扶養權利人住所地或居所地之法院管轄。法院就前項事件為裁定前，應使關係人有陳述意見之機會。第一百二十二條第二項、第三項、第一百二十三條、第一百二十四條、第一百二十七條第二項、第三項、第一百二十九條、第一百三十一條及第一百三十九條之二第二項之規定，於第一項事件準用之。
+* 140.1 （刪除）
 
-> 釋：一、本條新增。二、配合修正民法第一千一百二十條新增定扶養費給付事件，爰增訂第一項。三、定給付扶養費事件，影響扶養權人及扶養人權益甚鉅，法院為定扶養費給付之裁定前，應賦予關係人有陳述意見之機會，以保障其程序權，爰增訂第二項。四、受扶養權利人為未成年子女且有數人者，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權，該事件有理由者，程序費用由未成年子女之父母或父母之一方負擔；受扶養權利人為滿七歲以上之未成年人者，就第一項事件有非訟能力；法院就第一項事件為裁定前，得依聲請命為必要之處分，該裁定不得抗告，並準用民事訴訟法關於保全程序規定，以保障受扶養權利人之權益；法院關於命扶養費之給付，得依聲請或依職權，命為一次給付或分期給付，分期給付遲誤一期者，其後之期間視為亦已到期，此項裁定得為執行名義；本事件處理中兩造就扶養費之給付得達成協議，並記明筆錄，該項筆錄應送達當事人及利害關係人，並得為執行名義；就受扶養權利有無之訴訟業已繫屬於法院者，非訟法院應將第一項事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判；受扶養權利人為受監護宣告之人者，就第一項事件有非訟能力，爰增訂第三項。
+> 釋：一、本條刪除。二、家事事件法第四編第二章、第三章及第六章就夫妻、親子及親屬間扶養事件已有整體規範，爰配合刪除本條。
 
-* 140.2 法院依民法第一千一百二十條但書所定扶養費之給付，因情事變更請求法院變更事件，準用前條規定。
+* 140.2 （刪除）
 
-> 釋：一、本條新增。二、依民法第一千一百二十條但書規定，扶養費之給付，當事人不能協議時，由法院定之。關於此項扶養費之給付既由法院定之，則其後因情事變更而請求變更者，自仍應由法院變更之，無再經由親屬會議變更之必要；再者，請求法院變更事件，與前條由法院定扶養費給付事件相近，宜準用其程序，爰增訂本條。
+> 釋：一、本條刪除。二、家事事件法第四編第二章、第三章及第六章就夫妻、親子及親屬間扶養事件已有整體規範，爰配合刪除本條。
 
-* 141 民法第一千一百五十六條所定遺產清冊陳報事件，由繼承開始時被繼承人住所地之法院管轄。繼承人為前項陳報時，應於陳報書記載下列各款事項，並附具遺產清冊：一、陳報人。二、被繼承人之姓名及最後住所。三、知悉繼承之時間；如有其他繼承人者，其姓名、性別、出生年月日及住、居所。前項遺產清冊應記載被繼承人之財產狀況及繼承人已知之債權人、債務人。
+* 141 （刪除）
 
-> 釋：民國九十七年一月二日修正公布民法繼承編（下稱九十七年修正民法）第一千一百五十六條，已將限定繼承者應於繼承開始時起三個月內開具遺產清冊呈報法院之規定修改為繼承人於知悉其得繼承之時起，三個月內呈報法院，法院接獲限定繼承呈報後，應定期間命繼承人開具遺產清冊，爰於第二項第三款修改為陳報人應記載其知悉繼承之時間。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 141.1 民法第一千一百五十六條之一第一項所定債權人聲請命繼承人提出遺產清冊事件，由繼承開始時被繼承人住所地之法院管轄。債權人為前項聲請時，其聲請書應記載下列各款事項：一、聲請人。二、被繼承人之姓名及最後住所。三、繼承人之姓名及住、居所。四、聲請命繼承人提出遺產清冊之意旨。前條第二項、第三項規定，於繼承人依民法第一千一百五十六條之一第一項規定提出遺產清冊事件準用之。
+* 141.1 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正民法第一千一百五十六條之一第一項新增債權人聲請命繼承人提出遺產清冊事件，規定管轄法院、債權人聲請書應記載事項、繼承人為陳報時之準用規定。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 141.2 第一百四十一條規定，於繼承人依民法第一千一百五十六條之一第二項規定提出遺產清冊事件準用之。
+* 141.2 （刪除）
 
-> 釋：一、本條新增。二、配合九十八年修正民法第一千一百五十六條之一第二項，增訂法院依職權命繼承人提出遺產清冊事件，規定管轄法院及繼承人為陳報時之準用規定。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 142 民事訴訟法第五百四十一條至第五百四十三條之規定，除申報權利期間外，於法院依民法第一千一百五十七條為公示催告被繼承人之債權人報明債權時，準用之。前項情形應通知其他繼承人。
+* 142 （刪除）
 
-> 釋：一、本條新增。二、限定繼承之陳報為合法時，依民法第一千一百五十七條第一項規定，法院應依職權開始公示催告程序，命被繼承人之債權人於一定期限內報明債權，此一公示催告程序如何，法無明文，爰增訂第一項準用民事訴訟法第五百四十一條至第五百四十三條之規定，使法院有所遵循。惟有關申報權利期間，因民法第一千一百五十七條第二項已明定報明債權之期限不得在三個月以下，與民事訴訟法第五百四十三條所定申報權利期間應有二個月以上者不同，爰並設不準用民事訴訟法第五百四十三條關於申報權利期間之除外規定，以資兼顧。三、依民法第一千一百五十四條第二項規定，繼承人中之一人主張限定繼承時，其他繼承人視同為限定之繼承，故法院認限定繼承之陳報為合法，依職權開始公示催告程序時，自應通知其他繼承人，俾使其知悉已有限定繼承之情事，爰訂定第二項。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 143 前條報明債權期間屆滿後六個月內，繼承人應向法院陳報償還遺產債務之狀況並提出有關文件。前項六個月期間，法院因繼承人之聲請，認為必要時，得延展之。
+* 143 （刪除）
 
-> 釋：一、本條新增。二、為防繼承人於陳報限定繼承後，怠於清償債務，有害債權人之權益，爰增訂第一項，規定繼承人應於報明債權期限屆滿後六個月內，清理遺產償還債務，並向法院聲報償還遺產債務狀況及提出相關表冊。三、為恐繼承人不及於六個月內清理遺產償還債務，故增訂第二項法院得依繼承人之聲請延展聲報期限之規定。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 144 民法第一千一百七十四條所定拋棄繼承事件，由繼承開始時被繼承人住所地之法院管轄。拋棄繼承為合法者，法院應予備查，通知拋棄繼承人，並公告之。
+* 144 （刪除）
 
-> 釋：一、原條文第七十七條之一條次變更為本條。二、原條文為第一項，並配合第一百四十一條、第一百四十五條體例，刪除「繼承開始時」下之「，」。三、繼承人依民法第一千一百七十四條第一、二項之規定向法院為拋棄繼承之意思表示後，溯自繼承開始時即生繼承權喪失之法律效果，原無須法院為准許之裁定。惟繼承人欲辦理後續相關事宜時，主管機關往往要求須提出已拋棄繼承之證明，始克完成全部手續。為便利繼承人辦理相關手續，並使因其拋棄而應為繼承之人知悉上情，爰增訂第二項，規定拋棄繼承合法者，法院應予備查，將結果通知拋棄繼承人並公告之。至於拋棄繼承不合法者，法院應以裁定駁回，自不待言。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 145 無人承認之繼承事件，由繼承開始時被繼承人住所地之法院管轄。民法第一千一百七十八條之一所定保存遺產事件，亦得由遺產所在地之法院管轄。
+* 145 （刪除）
 
-> 釋：一、原條文第五十八條條次變更為本條。二、原條文第五十八條所定無人承認之繼承財產管理事件、第七十六條第一項後段所定繼承開始及親屬會議選定遺產管理人呈報事件、第七十八條第一項所定法院選任遺產管理人事件及同條第四項所定保存遺產事件，均與無人承認繼承有關，其管轄法院，以由被繼承人住所地之法院管轄為宜，為求體例簡明，爰將上開規定移列為本條第一項，並以「無人承認之繼承事件」予以概括。三、保存遺產事件，為調查及管理之便，除被繼承人之住所地外，亦應得由遺產所在地之法院管轄，爰增訂第二項，俾利適用。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 146 親屬會議依民法第一千一百七十七條為報明時，應由其會員一人以上於陳報書記載下列各款事項，並附具證明文件向法院提出之：一、陳報人。二、被繼承人之姓名、最後住所、死亡之年月日時及地點。三、選定遺產管理人之事由。四、所選定遺產管理人之姓名、性別、出生年月日及住、居所。
+* 146 （刪除）
 
-> 釋：一、本條新增。二、親屬會議既非法人，又非非法人團體，無非訟能力，其如何依民法第一千一百七十七條之規定，於繼承人有無不明時，將繼承開始及選定遺產管理人之事由向法院報明，法無明文，爰增訂本條，規定由其會員一人以上以陳報書附具證明文件，向法院報明，並明定應報明之事項，以利遵循。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 147 親屬會議選定之遺產管理人，以自然人為限。前項遺產管理人有下列各款情形之一者，法院應解任之，命親屬會議於一個月內另為選定：一、未成年人。二、受監護或輔助宣告之人。三、受破產宣告尚未復權。四、褫奪公權尚未復權。
+* 147 （刪除）
 
-> 釋：配合九十八年修正後民法，修正第二項第二款文字。又受輔助宣告之人應認不宜擔任遺產管理人為當，並於第二項第二款增列受輔助宣告人。至於依消費者債務清理條例規定受法院裁定開始清算程序之債務人，依該條例第八十四條規定，準用其他法令關於破產人資格、權利限制之規定，故遺產管理人受法院裁定開始清算程序者，自可準用第二項第三款規定。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 148 親屬會議選定之遺產管理人有下列情形之一者，法院得依利害關係人或檢察官之聲請，徵詢親屬會議會員、利害關係人或檢察官之意見後解任之，命親屬會議於一個月內另為選定：一、違背職務上之義務者。二、違背善良管理人之注意義務，致危害遺產或有危害之虞者。三、有其他重大事由者。
+* 148 （刪除）
 
-> 釋：一、原條文第六十條條次變更為本條。二、本文之「左列」修正為「下列」，俾符現行法制用語。三、民法第一千一百七十八條第二項規定，親屬會議未於一定期限內選定遺產管理人時，除利害關係人外，檢察官亦得聲請法院選任遺產管理人，則檢察官基於維護公益之目的，於遺產管理人不適任時，自有依職權介入聲請法院解任之必要，爰增訂檢察官亦為本事件之聲請人，並將徵詢親屬會議之意見，修正為徵詢親屬會議會員之意見，以符實際。又遺產管理人解任後，仍須另選管理人繼續管理遺產，方達遺產管理之目的，修正前本法就此未予明定，易滋疑義，爰增訂法院解任時，應命親屬會議於一個月內另為選定之規定。若親屬會議未於一個月內另為選定，利害關係人或檢察官即得依民法第一千一百七十八條第二項、本法第一百四十九條第一項之規定，聲請法院選任遺產管理人，併此敘明。四、為免掛一漏萬及適用上產生疑義，爰將原條文第六十條所定三款遺產管理人不適任之情事合併修正為兩款，並增列第三款有其他重大事由亦可解任之概括規定。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 149 利害關係人或檢察官依民法第一千一百七十八條第二項聲請選任遺產管理人時，其聲請書應記載下列事項，並附具證明文件向法院提出之：一、聲請人。二、被繼承人之姓名、最後住所、死亡之年月日時及地點。三、聲請人為利害關係人時，其法律上利害關係之事由。親屬會議未依第一百四十七條第二項或前條另為選定遺產管理人時，利害關係人或檢察官得聲請法院選任遺產管理人，並適用前項之規定。法院選任之遺產管理人，除自然人外，亦得選任公務機關任之。
+* 149 （刪除）
 
-> 釋：一、原條文第七十八條條次變更為本條。二、參酌原條文第二項規定之意旨，於第一項增列利害關係人或檢察官依民法第一千一百七十八條第二項聲請選任遺產管理人時之程式規定，以利遵循。三、第二項規定親屬會議於其所選定之遺產管理人經解任後，未依第一百四十七條第二項及第一百四十八條之規定另為選定時，利害關係人或檢察官得聲請法院選任，並適用前項聲請程式，俾更周延。四、無人承認繼承之遺產清理完畢後，如有賸餘，應歸屬國庫，而國有財產向由公務機關擔任管理人，故增訂第三項，規定法院選任遺產管理人時，除自然人外，亦得選任適當之公務機關任之。五、配合本法體例之調整，原條文第一項及第四項改列於第一百四十五條，第七十八條第二項及第三項改列於第一百五十三條，並就本法及民法相關規定，與法院選任之遺產管理人性質相同者，詳細臚列其可準用之範圍，附此敘明。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 150 依民法第一千一百七十八條所為之公示催告，應記載下列事項：一、陳報人。二、被繼承人之姓名、最後住所、死亡之年月日及地點。三、承認繼承之期間及期間內應為承認之催告。四、因不於期間內承認繼承而生之效果。五、法院。
+* 150 （刪除）
 
-> 釋：一、原條文第六十一條條次變更為本條。二、配合本法體例、用語及民法第一千一百七十八條、第一千一百八十五條規定，略作文字修正。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 151 依民法第一千一百七十九條第一項第三款所為之公示催告，除記載前條第二款及第五款所定事項外，並應記載下列事項：一、遺產管理人之姓名、住所及處理遺產事務之處所。二、報明債權及願否受遺贈聲明之期間，並於期間內應為報明或聲明之催告。三、因不報明或聲明而生之失權效果。
+* 151 （刪除）
 
-> 釋：一、本條新增。二、無人承認之繼承事件涉及二種公示催告，其一，為對繼承人之公示催告，法院應依職權為之，其應記載之事項已規定於前條；其二，乃對被繼承人之債權人及受遺贈人所為之公示催告，由遺產管理人向法院聲請，其公示催告應記載之事項，原無明文，爰配合前條規定，增訂本條，俾利遵循。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 152 民事訴訟法第五百四十二條及第五百四十三條之規定，除申報權利期間外，於前二條之公示催告準用之。
+* 152 （刪除）
 
-> 釋：一、本條新增。二、除公示催告應記載之事項外，其他關於公告之方法、申報權利期間如何起算等，原法均付之闕如，爰增訂本條，規定除申報權利期間外，均準用民事訴訟法之相關規定，以利適用。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 153 第一百十一條、第一百十二條、第一百十四條、第一百十六條、第一百十七條及民法第一千一百七十八條之一之規定，於第一百四十九條選任之遺產管理人準用之。法院選任之遺產管理人有第一百四十七條第二項及第一百四十八條所定各款情形之一者，得依職權或依聲請改任之。
+* 153 （刪除）
 
-> 釋：一、原條文第七十八條條次變更為本條。二、配合本法體例之調整，將原條文第二項及第三項改列於本條，並詳細臚列得準用之範圍。三、為使遺產能受適當之管理，本法關於失蹤人財產管理人之部分規定，如管理人之選任及改任（第一百十一條後段、第一百十二條）、財產管理人之登記（第一百十四條）、財產狀況之報告（第一百十六條）、前開報告之閱覽（第一百十七條）及民法第一千一百七十八條之一所定親屬會議選定遺產管理人前保存遺產之必要處置等，於依第一百四十九條規定所選任之遺產管理人，亦有準用必要，爰於第一項明定。四、法院選任之遺產管理人如有第一百四十七條第二項及第一百四十八條所定各款情形之一者，已不適任，爰增訂第二項法院得依職權或依聲請予以改任之規定。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 154 繼承人因故不能管理遺產，亦無遺囑執行人者，利害關係人或檢察官得聲請法院選任遺產清理人。前項選任遺產清理人事件，由繼承開始時被繼承人住所地之法院管轄。第一百十一條至第一百二十條、第一百四十九條第一項、第三項及第一百五十三條第二項之規定，於第一項選任遺產清理人事件準用之。遺產清理人就職後，應以公告方法催告債權人及受遺贈人，報明債權或為願否受遺贈之聲明，對於已知之債權人及受遺贈人並應分別通知之。遺產清理人應於公告期滿後六個月內清償債權，交付遺贈物，如有賸餘，應提存之；其性質不適於提存者，得於拍賣後，提存其價金。為清償債權或交付遺贈物之必要，清理人得經法院之認可，變賣遺產。第一百四十三條第二項規定，於前項情形準用之。
+* 154 （刪除）
 
-> 釋：一、原條文第七十九條條次變更為本條。二、繼承開始時，確有繼承人者，遺產即歸繼承人所有，由繼承人管理，不生民法繼承編第二章第五節所定無人承認繼承時應選定或選任遺產管理人之問題。但繼承人有不能管理遺產之情事時，為兼顧債權人及受遺贈人之利益，固有選任特定人代繼承人清理遺產之必要，惟原條文將之稱為遺產管理人，易與無人承認繼承之遺產管理人混淆，爰將之改稱為「遺產清理人」，以示區別。三、原條文第一項所定「繼承人未委任遺產管理人」致發生遺產不能清理之情形，本可涵蓋於繼承人因故不能管理遺產之中，無另行規定之必要，故將「未委任遺產管理人」一語刪除。又「被繼承人亦無遺囑指定」遺產管理人一語，應係被繼承人未以遺囑指定遺囑執行人之誤，爰將之修正為「亦無遺囑執行人」。至於遺產之清理與公益有關，宜使檢察官有權介入，爰增列檢察官為聲請權人。四、第一項選任遺產清理人事件，宜由被繼承人住所地之法院管轄，原法無明文，爰增訂第二項，俾利適用。五、原條文第二項移列為第三項。為確保遺產能受適當之清理，本法關於失蹤人財產管理人之部分規定及第一百五十三條第二項有關遺產管理人改任之規定，於本條之遺產清理人亦有準用必要，爰於本項增訂之。六、為利清理遺產暨使債權人及受遺贈人知所行使權利，參考公司法第八十八條有關清算人催告債權人報明債權之例，增訂第四項催告債權人及受遺贈人報明債權及願否受遺贈聲明之程序規定。七、原條文第三項改列為第五項，又為配合前項增訂之公告程序，將清理遺產之六個月期限修正為自公告期滿後起算，並增設清理人為清償債權或交付遺贈物之必要，得經法院許可變賣遺產之規定，以杜爭議，並利遺產之清理。八、為恐遺產清理人不及於六個月內完成遺產清理事務，爰於第六項增訂準用第一百四十三條第二項，必要時得聲請法院延展清理遺產期限之規定。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。三、另本條於六十一年增訂時，其立法背景係考量多數退除役官兵死亡後，據其身家資料知有繼承人，惟因繼承人大都在大陸地區，無法管理遺產，民法或相關實體法對此問題復無明文，遂設此遺產清理人之規定，以為補救措施；然臺灣地區與大陸地區人民關係條例施行後，該條例第六十八條第一項就此情形已設規定而有解決之道，故遺產清理人制度已無存在之必要。爰刪除本條。
 
-* 155 法院選任之遺產管理人或遺產清理人於職務執行完畢後，應向法院陳報處理遺產之狀況並提出有關文件。
+* 155 （刪除）
 
-> 釋：一、本條新增。二、法院對於其所選任之遺產管理人或清理人有監督之權，其監督之方法，依前條第三項，應準用失蹤人財產管理人之相關規定；惟失蹤人之財產僅生管理而無清理之問題，與遺產應全部處理完畢之情形未盡相同，爰增訂本條，規定處理完畢後應向法院陳報，以落實法院之監督。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 156 民法第六十條第三項、第一千二百十一條所定遺囑執行人之聲請指定事件及第一千二百十八條所定遺囑執行人之聲請另行指定事件，由繼承開始時被繼承人住所地法院管轄。第一百十四條之規定，於前項遺囑執行人準用之。
+* 156 （刪除）
 
-> 釋：一、原條文第八十條條次變更為本條。二、第一項刪除第二句下之逗號，其餘不修正。三、遺囑執行人依法有管理遺產之權責，如相關遺產權利之取得、喪失或變更依法應登記者，自應向登記機關為遺囑執行人之登記，俾公示正當之遺產管理人，以維交易安全，爰增設第二項準用第一百十四條有關失蹤人財產管理人登記之規定。四、原條文第二項所定準用原條文第七十七條第三項（即修正後本法第一百五十九條第三項）有關程序費用負擔之規定，移列於本法第一百五十七條，附此敘明。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 157 關於繼承事件之聲請為有理由時，程序費用由遺產負擔。
+* 157 （刪除）
 
-> 釋：一、原條文第八十條條次變更為本條。二、關於繼承事件之聲請為有理由時，其程序費用均宜由遺產負擔，較為公允，爰將原條文第二項另立一條，並擴大適用範圍，不以原條文所定民法第六十條第三項、第一千二百十一條之聲請指定遺囑執行人事件及第一千二百十八條之聲請另行指定遺囑執行人事件為限，而及於所有關於繼承事件之聲請，以臻衡平。
+> 釋：一、本條刪除。二、家事事件法第四編第七章就繼承事件已有整體規範，爰配合刪除本條。
 
-* 158 依民法第一千一百三十二條第一項規定為未成年人及受監護或輔助宣告之人聲請指定親屬會議會員事件，由未成年人、受監護或輔助宣告之人住所地或居所地之法院管轄。前項事件之聲請為有理由時，程序費用由未成年人、受監護或輔助宣告之人負擔。第一百二十三條、第一百三十九條之二第二項及第一百四十條之規定，於第一項事件準用之。
+* 158 （刪除）
 
-> 釋：一、配合九十八年修正後民法，修正第一項文字，第三項移列為第二項並作文字修正。按受輔助宣告人亦可能發生須指定親屬會議會員之情形（民法第一千一百二十條規定參照），並增列受輔助宣告人。關於管轄之規定，增訂居所地法院為管轄法院，以便利該未成年人、受監護輔助宣告之人聲請指定親屬會議會員。二、原第二項移列為第三項。第一項之未成年人、受監護宣告之人應有非訟能力；爰修正為第三項。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 159 為遺產聲請法院指定親屬會議會員事件，由繼承開始時被繼承人住所地之法院管轄。第一百四十條之規定，於前項情形準用之。第一項事件之聲請為有理由時，程序費用由遺產負擔。
+* 159 （刪除）
 
-> 釋：一、原條文第七十七條條次變更為本條。二、第一項及第二項略作文字修正，以統一用語及配合所引條文號次之變更。三、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰參照本法有關費用負擔規定之體例，將第三項文字略作調整。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
 * 160 （刪除）
 
@@ -758,49 +790,49 @@
 
 > 釋：一、本條刪除。二、配合本法第一百六十條規定刪除，爰刪除本條。
 
-* 162 依民法第一千一百三十二條第二項規定，聲請法院就民事訴訟法第五百八十六條及第五百九十六條第二項所定為養子女或未成年子女指定代為訴訟行為人事件，由養子女或未成年子女住所地之法院管轄。前項事件之聲請為有理由時，程序費用由養子女或未成年子女負擔。
+* 162 （刪除）
 
-> 釋：一、原條文第七十五條條次變更為本條。二、本條自原條文第七十五條第三、四項移列，並改採列舉規定。三、法院依民法第一千一百三十二條第二項規定，介入處理民事訴訟法第五百八十六條及第五百九十六條第二項所定應由親屬會議為養子女或未成年子女指定代為訴訟行為人之事件時，由養子女或未成年子女住所地之法院管轄，較為便利，爰於第一項明定。四、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰配合條文內容將第二項文字略作修正。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 163 依民法第一千一百三十二條第二項規定，聲請法院就民法第一千一百二十條本文之酌定扶養方法事件及第一千一百二十一條之變更扶養方法或程度事件，由受扶養權利人住所地或居所地之法院管轄。第一百二十二條第二項、第一百二十七條第二項、第三項、第一百二十九條、第一百三十一條、第一百三十九條之二第二項及第一百四十條之一第二項之規定，於前項事件準用之。
+* 163 （刪除）
 
-> 釋：一、配合九十七年一月九日修正民法第一千一百二十條增訂但書之規定修正文字，及關於管轄部分，增加居所地法院為管轄法院，以便利受扶養權利人聲請，爰修正第一項。二、第一項事件之聲請有理由者，其程序費用宜由負扶養義務之人負擔，不應由養子女或未成年子女負擔；未成年子女有數人者，其住所或居所不在一法院管轄區域內者，各該住所或居所地之法院俱有管轄權；法院關於酌定或變更扶養方法或程度，如有命給付扶養費之必要者，得依聲請或依職權，命為一次給付或分期給付，分期給付遲誤一期者，其後之期間視為亦已到期，此項裁定得為執行名義；本事件處理中兩造就扶養方法或程度，得達成協議，並記明筆錄，該項筆錄應送達當事人及利害關係人，並得為執行名義；就受扶養權利有無之訴訟業已繫屬於法院者，非訟法院應將第一項事件裁定移送於訴訟繫屬中之第一審或第二審法院合併裁判；法院為裁定前，應使關係人有陳述意見之機會；爰刪除原第二項之內容，增設準用規定，而修正第二項。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 164 法院就前條事件為裁定前，得徵詢受扶養權利人其他親屬之意見。
+* 164 （刪除）
 
-> 釋：一、本條新增。二、受扶養權利人之親屬對其受扶養需要之程度及扶養義務人之扶養能力，因親屬間之往來，應較法院了解，爰規定法院為裁定前，得徵詢其他親屬之意見，以助判斷之形成。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 165 法院依第一百六十三條第一項規定酌定或變更扶養方法或程度時，得命扶養義務人給付扶養費或其他財產，或命為相當之處分，並得訂定必要事項。
+* 165 （刪除）
 
-> 釋：一、本條新增。二、法院酌定或變更扶養方法或程度時，應斟酌受扶養權利人之需要及扶養義務人之負擔能力，其內容極富多樣性，為使法院有所遵循，爰規定法院得命扶養義務人給付扶養權利人扶養費或其他生活所必需之其他財產，以為例示，並規定法院得命為相當之處分或訂定必要事項之概括規定，以免遺漏，並利法院得視具體情況靈活運用。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 166 依民法第一千一百三十二條第二項規定，聲請法院處理下列各款所定應經親屬會議處理之事件，由被繼承人住所地之法院管轄：一、民法第一千一百四十九條所定遺產之酌給。二、民法第一千一百七十九條第二項及第一千一百八十條所定對於遺產管理人之監督。三、民法第一千一百八十三條所定遺產管理人報酬之酌定。四、民法第一千一百九十七條所定口授遺囑真偽之認定。五、民法第一千二百十二條所定遺囑之提示。六、民法第一千二百十三條所定密封遺囑之開視。前項各款所列事件之聲請為有理由時，程序費用由遺產負擔。
+* 166 （刪除）
 
-> 釋：一、原條文第七十五條條次變更為本條。二、本條自原條文第三項、第四項移列，並改採列舉方式規定。三、民法繼承編中，關於應經親屬會議處理之事項，如由法院依民法第一千一百三十二條第二項之規定處理時，宜由被繼承人住所地之法院管轄，爰列舉繼承編之相關規定於第一項，訂定事件之管轄法院，以利適用。四、依第二十一條規定，非訟事件之程序費用除法律另有規定外，本由聲請人負擔，無重複規定必要，爰將原條文第四項規定之文字略作調整，改列為第二項。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 167 法院為前條第一項第三款之裁定時，得調查遺產管理人所為遺產管理事務之繁簡及被繼承人之財產收益狀況。
+* 167 （刪除）
 
-> 釋：本法第一百六十一條雖經刪除，但法院在酌定遺產管理人之報酬時，應仍得調查遺產管理人所為遺產管理事務之繁簡及被繼承人之財產收益狀況，以利酌定適當之報酬，爰修正本條。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 168 其他依民法第一千一百三十二條所定聲請法院處理應經親屬會議處理之事件，準用第一百六十二條至第一百六十七條之規定。
+* 168 （刪除）
 
-> 釋：配合本法第一百六十條及第一百六十一條刪除，酌予文字修正。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 169 第一百二十三條至第一百二十五條之規定，於本節之事件準用之。
+* 169 （刪除）
 
-> 釋：一、本條新增。二、本節之事件均與親屬或繼承有關，本法第一百二十三條關於七歲以上未成年人之非訟能力、第一百二十四條關於裁定前之保全處分及第一百二十五條裁定前調查程序之規定，於本節事件均有準用必要，爰增訂本條。
+> 釋：一、本條刪除。二、家事事件法第四編第十二章就親屬會議事件已有整體規範，爰配合刪除本條。
 
-* 169.1 兒童及少年福利法第三十七條第二項、兒童及少年性交易防制條例第十六條、第十七條、身心障礙者權益保障法第八十條第一項所定安置事件，由被安置人住所地、居所地或所在地之法院管轄。第一百二十三條及第一百三十九條之二第二項之規定，於前項事件準用之。
+* 169.1 （刪除）
 
-> 釋：一、本條新增。二、配合兒童及少年福利法第三十七條第二項、兒童及少年性交易防制條例第十六條、第十七條、身心障礙者權益保障法第八十條第一項新增安置規定，爰增訂第一項。三、被安置人為滿七歲以上之未成年人或受監護宣告之人，就第一項事件，均有非訟能力，爰增訂第二項。
+> 釋：一、本條刪除。二、家事事件法第四編第十三章就保護安置事件已有整體規範，爰配合刪除本條。
 
-* 169.2 精神衛生法第四十二條第三項及第五項所定聲請法院裁定停止緊急安置或強制住院事件，由嚴重病人住所地、居所地或所在地之法院管轄。第一百二十三條及第一百三十九條之二第二項之規定，於前項事件準用之。
+* 169.2 （刪除）
 
-> 釋：一、本條新增。二、配合精神衛生法第四十二條第三項及第五項所定聲請法院裁定停止緊急安置或強制住院之規定，爰增訂第一項。三、嚴重病人為滿七歲以上之未成年人或受監護宣告之人，就第一項事件，均有非訟能力，爰增訂第二項。
+> 釋：一、本條刪除。二、家事事件法第四編第十三章就保護安置事件已有整體規範，爰配合刪除本條。
 
-* 170 本章所定家事非訟事件，關係人或法定代理人本人無正當理由，不從法院之命到場者，得處新臺幣一萬五千元以下罰鍰。對於前項裁定得為抗告；抗告中應停止執行。
+* 170 （刪除）
 
-> 釋：一、本條新增。二、家事事件態樣不一，又多攸關公益，為使裁判妥適，部分事件有強制關係人或法定代理人本人到場接受訊問，以供法院審酌參考之必要，爰增訂本條，規定無正當理由不從法院之命到場者之處罰及其抗告程序。
+> 釋：一、本條刪除。二、家事事件法第十三條設有當事人本人到場義務及違反之罰則規定，爰配合刪除本條。
 
 * 171 公司法所定由法院處理之公司事件，由本公司所在地之法院管轄。
 
@@ -910,7 +942,7 @@
 
 > 釋：一、本條新增。二、本法修正施行後，就事件管轄或審理程序，已有不同於原法之規定（例如抗告原則上由地方法院以合議行之、僅得以適用法規顯有錯誤為理由，向直接上級法院提起再抗告、司法事務官處理受移轉事件所為處分等），故修正施行前已繫屬之事件，究應由何法院管轄及依修正前抑或修正後所定程序審理，宜有明文，爰本於「程序從新」原則，參考民事訴訟法施行法第四條之一訂定本條。三、本條第二款係指地方法院於本法施行前已為終局裁定，但於待確定期間，本法已開始施行之事件。此類事件固係於本法施行前已為終局裁定，但因本法就抗告及再抗告已有不同於原法之規定，故仍依程序從新原則，規定適用修正後本法之規定，亦即當事人如未於法定期間聲明不服，即應依修正後本法規定確定、核發確定證明書；當事人如於法定期間內依法聲明不服，亦應視事件係由法官裁定或司法事務官所為處分，分依修正後本法所定抗告或其他聲明不服救濟程序處理。四、第三款係指地方法院於本法修正施行前已為終局裁定，經當事人聲明不服，全案業已送至抗告法院，但抗告法院於本法施行後尚未為終局裁定之事件。因該事件於本法施行前已經一審終結，並送至抗告法院，為求程序安定，爰設程序從新原則之例外，規定此時應依本法修正前規定處理。又本款所定「抗告法院」，解釋上當然包括再抗告法院在內，故未贅列再抗告法院，附此敘明。
 
-* 198 本法自公布日起六個月施行。本法中華民國九十八年十二月十五日修正條文，自公布日施行。
+* 198 本法自公布日起六個月施行。本法修正條文，自公布日施行。
 
-> 釋：增訂第二項「本法中華民國九十八年十二月十五日修正條文，自公布日施行」。
+> 釋：一、原條文第一項未修正。二、第二項修正為「本法修正條文，自公布日施行&#65379;。
 
